<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.setting.view.SettingFragment">

    <TextView
        android:id="@+id/_tv_title_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/setting"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="88dp"
        android:backgroundTint="@color/active_color"
        app:cardCornerRadius="25dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="@color/black"
        app:strokeWidth="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/location"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioGroup_setting_location"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:checkedButton="@+id/radio_setting_gps"
            android:padding="20dp"
            android:theme="@style/Widget.AppCompat.CompoundButton.RadioButton">


            <RadioButton
                android:id="@+id/radio_setting_gps"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/gps_setting"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />

            <RadioButton
                android:id="@+id/radio_setting_map"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/map_title"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </RadioGroup>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/active_color"
        app:cardCornerRadius="25dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="@color/black"
        app:strokeWidth="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/language"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioGroup_setting_language"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:checkedButton="@+id/radio_setting_english"
            android:padding="20dp"
            android:theme="@style/Widget.AppCompat.CompoundButton.RadioButton">


            <RadioButton
                android:id="@+id/radio_setting_english"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/english"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />

            <RadioButton
                android:id="@+id/radio_setting_arabic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/arabic"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </RadioGroup>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/active_color"
        app:cardCornerRadius="25dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_location"
        app:rippleColor="@color/black"
        app:strokeWidth="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/notifications"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioGroup_setting_notification"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:checkedButton="@+id/radio_setting_enable_notification"
            android:padding="20dp"
            android:theme="@style/Widget.AppCompat.CompoundButton.RadioButton">


            <RadioButton
                android:id="@+id/radio_setting_enable_notification"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/enable"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />

            <RadioButton
                android:id="@+id/radio_setting_disable_notification"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/disable"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </RadioGroup>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/active_color"
        app:cardCornerRadius="25dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_language"
        app:rippleColor="@color/black"
        app:strokeWidth="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/temperature"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioGroup_setting_temp"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:checkedButton="@+id/radio_setting_celsius"
            android:padding="20dp"
            android:theme="@style/Widget.AppCompat.CompoundButton.RadioButton">


            <RadioButton
                android:id="@+id/radio_setting_celsius"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/celsius"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />

            <RadioButton
                android:id="@+id/radio_setting_kelvin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/kelvin"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radio_fahrenheit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/fahrenheit"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </RadioGroup>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>