<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true"
    app:cardElevation="3dp"
    android:backgroundTint="@color/teal_200"
    app:strokeWidth="0dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/tv_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/satarday"
            android:textColor="@color/purple_700"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/iv_icon_days"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_icon_days"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:src="@drawable/sun"
            app:layout_constraintEnd_toStartOf="@+id/tv_status_days"
            app:layout_constraintHorizontal_bias="0.42"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/tv_status_days"
            android:layout_width="70dp"
            android:layout_height="25dp"
            android:text="@string/sunny_day"
            android:textColor="@color/purple_700"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/iv_icon_days"
            app:layout_constraintTop_toTopOf="@id/iv_icon_days"
            app:layout_constraintBottom_toBottomOf="@id/iv_icon_days"
            />

        <TextView
            android:id="@+id/tv_degree_days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/degree_min_max"
            android:textColor="@color/purple_700"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/iv_icon_days"
            app:layout_constraintBottom_toBottomOf="@id/iv_icon_days"
            android:layout_marginEnd="8dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>